# pwdb-rs

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: cli_common.rs  db.rs  db_cli.rs  gpgh.rs  main.rs  pwdb.proto  record_cli.rs
test-common/: test-db.json  test_env.rs  tester@pwdb.local.key
